Vendor text and dialog size updated, along with button text

--- a/Purchasing.Web/Views/Order/_VendorDialog.cshtml
+++ b/Purchasing.Web/Views/Order/_VendorDialog.cshtml
@@ -2,7 +2,13 @@
     <form id="vendor-form">
         <section class="section-contents">
             <div class="section-text">
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>    
+                <p>
+                    Please fill out the information for a new vendor and then click 'Create Vendor'. 
+                    Fields decorated with <span style="color: red;">*</span> are required.
+                </p>
+                <p>
+                    Note: Adding a vendor here will not add the vendor to the campus financial system.
+                </p>
             </div>
             <ul>
                 <li>
