--- a/Purchasing.Web/Views/Order/_Vendor.cshtml
+++ b/Purchasing.Web/Views/Order/_Vendor.cshtml
@@ -10,7 +10,7 @@
                 Please select the vendor from where the requested items will be purchased.  If you are unsure of which vendor, leave the drop down as "unspecified".  You may also add a new vendor or search for a vendor from the campus financial system.
             </p>
             <p>
-                Note: adding a vendor here will not add a vendor to the campus financial system.
+                Note: Creating a new vendor using 'Add Vendor' will not add that vendor to the campus financial system.
             </p>    
         </div>
 
