update shipping address and calculator header text

--- a/Purchasing.Web/Views/Order/_CalculatorDialog.cshtml
+++ b/Purchasing.Web/Views/Order/_CalculatorDialog.cshtml
@@ -2,7 +2,10 @@
     <form id="calculator-form">
         <section class="section-contents">
             <div class="section-text">
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>    
+                <p>
+                    Enter a quantity and total value for this line item, and price will be calculated for you.  
+                    After you are finished press 'Accept Values' to insert the quantity and price values into the underlying line item.
+                </p>    
             </div> 
             <ul> 
                 <li>           
