--- a/Purchasing.Web/Views/Order/_ShippingAddressDialog.cshtml
+++ b/Purchasing.Web/Views/Order/_ShippingAddressDialog.cshtml
@@ -3,8 +3,9 @@
     <section class="section-contents">
         <div class="section-text">
             <p>
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                Please fill out the information for a new shipping address and then click 'Create Shipping Address'. 
+                Fields decorated with <span style="color: red;">*</span> are required.
+            </p>  
         </div>
         <ul>
             <li>
