just working on getting the web service submitting correctly.

--- a/Purchasing.Web/Views/FinancialApi/Index.cshtml
+++ b/Purchasing.Web/Views/FinancialApi/Index.cshtml
@@ -1,6 +1,19 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Financial Systems API";
 }
 
-<h2>Index</h2>
+<ul>
+    <li><strong>Order 1 Doc Number: </strong>
+        @ViewBag.Order1DocNum
+    </li>
+    <li><strong>Order 2 Doc Number: </strong>
+        @ViewBag.Order2DocNum
+    </li>
+    <li><strong>Order 3 Doc Number: </strong>
+        @ViewBag.Order3DocNum
+    </li>
+    <li><strong>Order 4 Doc Number: </strong>
+        @ViewBag.Order4DocNum
+    </li>
+</ul>
 
