--- a/Purchasing.Web/Css/Datatables.css
+++ b/Purchasing.Web/Css/Datatables.css
@@ -63,10 +63,17 @@ table.dataTable .sorting_asc, table.dataTable .sorting_desc {background-color: r
 table.dataTable .sorting_1 {box-shadow: 3px 0px 3px #ddd,  -3px 0px 3px #ddd; border-left: 1px solid #fff; border-right: 1px solid #fff;}
 table.dataTable .sorting_1 {background-color: rgba(255,255,255,.6);}
 
+table.dataTable th.sorting_asc {border-top: 2px solid #fff;}
+table.dataTable th.sorting_desc {border-bottom: 6px solid #fff;}
+
 table.dataTable th:first-child.sorting_asc, table.dataTable th:first-child.sorting_desc,
 table.dataTable td:first-child.sorting_1, table.dataTable td:last-child.sorting_1, 
 table.dataTable th:last-child.sorting_asc, table.dataTable th:last-child.sorting_desc{box-shadow: none; border: 0px none; background-color: transparent;}
 
+.dataTables_paginate a {padding: 3px; margin: 0 1px; background: #eee; border: 1px solid #999; cursor: pointer; display: inline-block;}
+.dataTables_paginate a.paginate_button_disabled {background: #fff; color: #bbb; border: 1px solid #ccc; cursor: default;}
+.dataTables_paginate a.first {padding-left: 8px; border-top-left-radius: 20px; border-bottom-left-radius: 20px;}
+.dataTables_paginate a.last {padding-right: 8px; border-top-right-radius: 20px; border-bottom-right-radius: 20px;}
 
 /* order table filters */
 .dt-table-filter-header.display-form {
