replace lorem ipsum text on the review page

--- a/Purchasing.Web/Views/Order/_ReviewCancel.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewCancel.cshtml
@@ -3,10 +3,9 @@
 @if (Model.CanCancelOrder)
 {
     <section class="ui-corner-all display-form">
-
         <header class="ui-corner-top ui-widget-header">Cancel Order</header>
-        <div class="section-text nomargin">
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>    
+        <div class="section-text">
+            <p>You can cancel this order at any time by entering a Comment (required) and clicking "Cancel Order."</p>    
         </div>
 
         <div class="section-contents">
