updated workgroup addresses to also store the building code from lookup.

--- a/Purchasing.Web/Views/Workgroup/EditAddress.cshtml
+++ b/Purchasing.Web/Views/Workgroup/EditAddress.cshtml
@@ -13,4 +13,29 @@
 	</ul>
 }
 
+@section AdditionalScripts
+{
+
+	<script type="text/javascript">
+
+	    var url = '@Url.Action("SearchBuilding")';
+
+	    $(function () {
+
+	        $("#WorkgroupAddress_Building").autocomplete({
+	            source: url,
+	            minLength: 2,
+	            select: function (event, ui) {
+
+	                $("#WorkgroupAddress_BuildingCode").val(ui.item.id);
+
+	            }
+	        });
+
+	    });
+
+	</script>
+
+}
+
 @Html.Partial("_AddressForm")
