--- a/Purchasing.Web/Views/Admin/ModifyDepartmental.cshtml
+++ b/Purchasing.Web/Views/Admin/ModifyDepartmental.cshtml
@@ -62,6 +62,7 @@
                     }
                     else {
                         $("#User_IsActive").prop("checked", false); 
+                        $("#User_IsActive").change();
                     } 
                 }
 
