fixed a defect with address building code

--- a/Purchasing.Web/Views/Workgroup/_AddressForm.cshtml
+++ b/Purchasing.Web/Views/Workgroup/_AddressForm.cshtml
@@ -35,8 +35,7 @@ Example: Dinosaur 1  *@
 					</div>
 					<div class="editor-field">
 						@Html.EditorFor(model => model.WorkgroupAddress.Building)
-                        @*<input type="text" id="WorkgroupAddress_Building" name="WorkgroupAddress.Building" />*@
-                        @Html.HiddenFor(model => model.WorkgroupAddress.BuildingCode)
+                        @Html.Hidden("WorkgroupAddress.BuildingCode", Model.WorkgroupAddress != null ? Model.WorkgroupAddress.BuildingCode.Id : string.Empty)
 						@Html.ValidationMessageFor(model => model.WorkgroupAddress.Building)
 					</div>
 				</li>
