--- a/Purchasing.Web/Views/ConditionalApproval/Create.cshtml
+++ b/Purchasing.Web/Views/ConditionalApproval/Create.cshtml
@@ -14,7 +14,7 @@
         }
         else
         {
-            <li>@Html.ActionLink("Back to List", "Index", "ConditionalApproval", new { @class = "button" })</li>
+            <li>@Html.ActionLink("Back to List", "ByOrg", "ConditionalApproval", new { id = ViewBag.OrganizationId}, new {@class = "button" })</li>
         }
 		
 	</ul>
