unaccounted line split now validates green/red if line total exists

--- a/Purchasing.Web/Views/Order/_LineItems.cshtml
+++ b/Purchasing.Web/Views/Order/_LineItems.cshtml
@@ -99,7 +99,7 @@
                         <td>Tax:</td>
                         <td><span data-bind="text: lineTaxCost" class="add-line-item-split-tax-shipping">$0.00</span></td>
                         </tr>
-                        <tr class="red">
+                        <tr data-bind="css: { red: hasLineTotal() && hasUnaccounted(), green: hasLineTotal() && !hasUnaccounted() }">
                         <td>Unaccounted:</td>
                         <td><span data-bind="text: lineUnaccounted" class="add-line-item-split-difference amount-difference"></span></td>
                         </tr>
