added check to remove building when box is blanked.

--- a/Purchasing.Web/Views/Workgroup/EditAddress.cshtml
+++ b/Purchasing.Web/Views/Workgroup/EditAddress.cshtml
@@ -29,6 +29,13 @@
 
 	                $("#WorkgroupAddress_BuildingCode").val(ui.item.id);
 
+	            },
+	            change: function (event, ui) {
+                
+	                if (ui.item == null) {
+	                    $("#WorkgroupAddress_BuildingCode").val("");
+	                }
+
 	            }
 	        });
 
