--- a/Purchasing.Web/Views/Order/_ShippingAddressDialog.cshtml
+++ b/Purchasing.Web/Views/Order/_ShippingAddressDialog.cshtml
@@ -21,8 +21,8 @@
                 <div class="editor-label">
                     Building: </div>
                 <div class="editor-field">
-                    <input id="address-building" name="address-building" type="text" placeholder="Building"
-                        maxlength="50" />
+                    <input id="address-building" name="address-building" type="text" placeholder="Building" maxlength="50" />
+                    <input id="address-buildingcode" name="address-buildingcode" type="hidden" />
                     <span data-valmsg-for="address-building" data-valmsg-replace="true"></span>
                 </div>
             </li>
