added button class to several links

--- a/Purchasing.Web/Views/Wizard/Accounts.cshtml
+++ b/Purchasing.Web/Views/Wizard/Accounts.cshtml
@@ -16,7 +16,7 @@
 	@Html.Partial("_Navigation")
     <nav class="col2">
     <ul class='navigation'>
-		<li>@Html.ActionLink("Add another account", "AddAccounts", new { Model.Id})</li>
+		<li>@Html.ActionLink("Add another account", "AddAccounts", new { Model.Id}, new{@class="button"})</li>
 	</ul>
     </nav>
 
