--- a/Purchasing.Web/Views/Wizard/ConditionalApprovals.cshtml
+++ b/Purchasing.Web/Views/Wizard/ConditionalApprovals.cshtml
@@ -11,7 +11,7 @@
     @Html.Partial("_Navigation")
     <nav class="col2">
 	<ul class='navigation'>
-		<li>@Html.ActionLink("Create New", "AddConditionalApproval", new {id= ViewBag.WorkgroupId})</li>
+		<li>@Html.ActionLink("Add More Conditional Approvals", "AddConditionalApproval", new { id = ViewBag.WorkgroupId }, new { @class = "button" })</li>
 	</ul>
     </nav>
 
