--- a/Purchasing.Web/Views/AutoApproval/Delete.cshtml
+++ b/Purchasing.Web/Views/AutoApproval/Delete.cshtml
@@ -10,7 +10,7 @@
 @section SubNav
 {
 	<ul class="navigation">
-		<li>@Html.ActionLink("Back to List", "Index", new { showAll = @ViewBag.ShowAll })</li>
+		<li>@Html.ActionLink("Back to List", "Index", new { showAll = @ViewBag.ShowAll }, new { @class = "button" })</li>
 	</ul>
 }
 
