Order splits now turn green when amount is all accounted for

--- a/Purchasing.Web/Views/Order/_OrderSplits.cshtml
+++ b/Purchasing.Web/Views/Order/_OrderSplits.cshtml
@@ -40,7 +40,7 @@
         <td>Split Total</td>
         <td><span data-bind="text: orderSplitTotal" id="order-split-account-total">$0.00</span></td>
         </tr>
-        <tr class="red">
+        <tr data-bind="css: { red: hasUnaccounted(), green: !hasUnaccounted() }">
         <td>Unaccounted</td>
         <td><span data-bind="text: orderSplitUnaccounted" id="order-split-account-difference" class="amount-difference"></span></td>
         </tr>
