--- a/Purchasing.Web/Views/Organization/Index.cshtml
+++ b/Purchasing.Web/Views/Organization/Index.cshtml
@@ -37,9 +37,9 @@
 					<img src='@Url.Image("details.png")' />
 				</a>
 			</td>
-			<td>
-				@item.Name
-			</td>
+            <td>
+                @Html.ActionLink(item.Name, "Details", "Organization", new {id=item.Id}, new {})
+            </td>
 			<td>
 				@item.TypeCode
 			</td>
